[gd_scene load_steps=56 format=3 uid="uid://c7u6etc7d7fqv"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_ujf4f"]
[ext_resource type="Texture2D" uid="uid://b31glqgdntvaa" path="res://icon.svg" id="2_myxi8"]
[ext_resource type="Texture2D" uid="uid://sppnqja51ex8" path="res://Sprites/Characters/Player/Sber1.png" id="3_j8cnd"]
[ext_resource type="Texture2D" uid="uid://drv6lr5yqs0gs" path="res://Sprites/Things/money.png" id="4_cghpw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ef2hd"]
atlas = ExtResource("3_j8cnd")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd66h"]
atlas = ExtResource("3_j8cnd")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h14ce"]
atlas = ExtResource("3_j8cnd")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_af847"]
atlas = ExtResource("3_j8cnd")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_btycu"]
atlas = ExtResource("3_j8cnd")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_70n3h"]
atlas = ExtResource("3_j8cnd")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkogu"]
atlas = ExtResource("3_j8cnd")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjn8v"]
atlas = ExtResource("3_j8cnd")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv54r"]
atlas = ExtResource("3_j8cnd")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_njqde"]
atlas = ExtResource("3_j8cnd")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfox7"]
atlas = ExtResource("3_j8cnd")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ydvk"]
atlas = ExtResource("3_j8cnd")
region = Rect2(64, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mmml"]
atlas = ExtResource("3_j8cnd")
region = Rect2(128, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfr41"]
atlas = ExtResource("3_j8cnd")
region = Rect2(192, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjgiu"]
atlas = ExtResource("3_j8cnd")
region = Rect2(256, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m50op"]
atlas = ExtResource("3_j8cnd")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qrki"]
atlas = ExtResource("3_j8cnd")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j117o"]
atlas = ExtResource("3_j8cnd")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2skj"]
atlas = ExtResource("3_j8cnd")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6keqb"]
atlas = ExtResource("3_j8cnd")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bsyx"]
atlas = ExtResource("3_j8cnd")
region = Rect2(0, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdo0y"]
atlas = ExtResource("3_j8cnd")
region = Rect2(64, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksmoc"]
atlas = ExtResource("3_j8cnd")
region = Rect2(128, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_056vl"]
atlas = ExtResource("3_j8cnd")
region = Rect2(192, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dumam"]
atlas = ExtResource("3_j8cnd")
region = Rect2(256, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5fwv"]
atlas = ExtResource("3_j8cnd")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq7es"]
atlas = ExtResource("3_j8cnd")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7678i"]
atlas = ExtResource("3_j8cnd")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_17hbs"]
atlas = ExtResource("3_j8cnd")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2nsa"]
atlas = ExtResource("3_j8cnd")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_60yyi"]
atlas = ExtResource("3_j8cnd")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_42g5i"]
atlas = ExtResource("3_j8cnd")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d6d8"]
atlas = ExtResource("3_j8cnd")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki85p"]
atlas = ExtResource("3_j8cnd")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_04f14"]
atlas = ExtResource("3_j8cnd")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_30qkj"]
atlas = ExtResource("3_j8cnd")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwvfn"]
atlas = ExtResource("3_j8cnd")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpihf"]
atlas = ExtResource("3_j8cnd")
region = Rect2(0, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_frn4x"]
atlas = ExtResource("3_j8cnd")
region = Rect2(64, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cc3e"]
atlas = ExtResource("3_j8cnd")
region = Rect2(128, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4wo3"]
atlas = ExtResource("3_j8cnd")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a6vs"]
atlas = ExtResource("3_j8cnd")
region = Rect2(256, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsbaa"]
atlas = ExtResource("3_j8cnd")
region = Rect2(320, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r304x"]
atlas = ExtResource("3_j8cnd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvda7"]
atlas = ExtResource("3_j8cnd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk2is"]
atlas = ExtResource("3_j8cnd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jg8j"]
atlas = ExtResource("3_j8cnd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3oidl"]
atlas = ExtResource("3_j8cnd")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_13p7u"]
atlas = ExtResource("3_j8cnd")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_5e6vq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef2hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd66h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h14ce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_af847")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btycu")
}],
"loop": true,
"name": &"IdleDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_70n3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkogu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjn8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv54r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njqde")
}],
"loop": true,
"name": &"IdleLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfox7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ydvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mmml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfr41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjgiu")
}],
"loop": true,
"name": &"IdleRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m50op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qrki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j117o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2skj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6keqb")
}],
"loop": true,
"name": &"IdleUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bsyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdo0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksmoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_056vl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dumam")
}],
"loop": false,
"name": &"PickUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5fwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq7es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7678i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17hbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2nsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60yyi")
}],
"loop": true,
"name": &"RunDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42g5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d6d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki85p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04f14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30qkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwvfn")
}],
"loop": true,
"name": &"RunLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpihf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frn4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cc3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4wo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a6vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsbaa")
}],
"loop": true,
"name": &"RunRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r304x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvda7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk2is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jg8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oidl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13p7u")
}],
"loop": true,
"name": &"RunUp",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_a8xf0"]
atlas = ExtResource("4_cghpw")
region = Rect2(32, 0.135, 32, 32)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_ujf4f")

[node name="ShapeCollision" type="CollisionPolygon2D" parent="."]
position = Vector2(-2, 13)
polygon = PackedVector2Array(11, -43, -6, -43, -6, -13, 11, -13)

[node name="SpriteAnimated" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_5e6vq")
animation = &"RunRight"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="LabelMoney" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.002
anchor_top = 0.003
anchor_right = 0.069
anchor_bottom = 0.039
offset_left = -0.304
offset_top = 0.056
offset_right = 0.511993
offset_bottom = -0.272001
text = "0"
horizontal_alignment = 2

[node name="Money" type="Sprite2D" parent="CanvasLayer/Control"]
position = Vector2(96, 16)
texture = SubResource("AtlasTexture_a8xf0")

[node name="ButtonLeft" type="TouchScreenButton" parent="CanvasLayer/Control"]
visible = false
position = Vector2(64, 448)
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_myxi8")

[node name="ButtonRight" type="TouchScreenButton" parent="CanvasLayer/Control"]
visible = false
position = Vector2(192, 448)
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_myxi8")

[node name="ButtonUp" type="TouchScreenButton" parent="CanvasLayer/Control"]
visible = false
position = Vector2(128, 384)
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_myxi8")

[node name="ButtonDown" type="TouchScreenButton" parent="CanvasLayer/Control"]
visible = false
position = Vector2(128, 512)
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_myxi8")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -12)
zoom = Vector2(2, 2)
